// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

let x : $Trusted<number> = 3;
module.exports = (x : any);

=====================================output=====================================
// @flow

let x: $Trusted<number> = 3;
module.exports = (x: any);

================================================================================
`;

exports[`b.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const c = require('./folder/c')
let x : string = c;

=====================================output=====================================
// @flow

const c = require("./folder/c");
let x: string = c;

================================================================================
`;

exports[`f.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const e = require('./folder/e');
module.exports = e;

=====================================output=====================================
// @flow

const e = require("./folder/e");
module.exports = e;

================================================================================
`;
